--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #9268b2;
+  --warning: #e88b8b;
   --primary-text: #ffffff;
   --secondary: #ffffb2;
   --secondary-text: #ffffff;
